fixing spacing across patient1 and modal popups

--- a/src/javascript/templates/patient1/patient1View11.hbs
+++ b/src/javascript/templates/patient1/patient1View11.hbs
@@ -50,7 +50,7 @@
                 <blockquote>
                 There are two main types of surgery to remove cancerous breast tissue.
                 </blockquote>
-                <main id="content-main" class="row patient-1 svg-test">
+                <main id="content-main" class="row patient-1">
 
                   <p>
                     Breast-conserving surgery: Only the part of the breast that contains cancerous tissue is removed.<br><br>
