--- a/src/javascript/templates/patient1/patient1View12.hbs
+++ b/src/javascript/templates/patient1/patient1View12.hbs
@@ -51,7 +51,7 @@
                                     <blockquote>
                                     The pathologist examined Velma’s tissue and provided a pathology report.
                                     </blockquote>
-                                    <main id="content-main" class="row patient-1 svg-test">
+                                    <main id="content-main" class="row patient-1 ">
 
                       <p>
                         A pathology report contains detailed information about the patient’s diagnosis. Velma’s physicians will use the information in the report to help them make decisions about the type of treatment that she might receive.
