--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -48,7 +48,7 @@
                   <blockquote>
                 Let’s evaluate the pathology report from Velma’s right breast lumpectomy.
                   </blockquote>
-                  <main id="content-main" class="row patient-1 svg-test">
+                  <main id="content-main" class="row patient-1">
 
     <p>
 Generally, the smaller the tumor, the better the patient’s chances for positive outcomes and the lower the chances of recurrence of breast cancer.<br><br>
@@ -98,7 +98,7 @@ Patient age: 44 years old</td></p>
 
 
                                 <!-- Button trigger modal -->
-                                <a class="continue"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                                <a class="continue next"><button type="button"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
 
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
