--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -56,7 +56,7 @@
     <blockquote>
   Velma’s doctors have sent her tissue sample for ER testing.
   </blockquote>
-  <main id="content-main" class="row patient-1">
+  <main id="content-main" class="row patient-1 svg-test">
 
     <h2>Conducting the ER test:</h2>
       <div class="svg-container">
@@ -81,7 +81,7 @@ A second antibody binds to the first and color develops where this antibody bind
 
               </div>
               <div class="col-md-4">
-                <a data-navigate="patient1view19" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
               </div>
             </div>
         </div>
