--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -88,7 +88,7 @@ The sample is washed in a buffer agent.</p>
 
                     </div>
                     <div class="col-md-4">
-                        <a data-navigate="patient1view24" class="continue next">
+                        <a  class="continue next">
                             <button class="muted" type="button" name="button">Next &#8594;</button>
                         </a>
                     </div>
