--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -39,7 +39,7 @@
     <blockquote>
       It is important to consider the size of an abnormality when evaluating the mammogram.
     </blockquote>
-    <main id="content-main" class="row patient-1">
+    <main id="content-main" class="row patient-1 svg-test">
 
       <p>
       Look at the abnormality in Velma’s mammogram.  Which of the objects is closest to the size of the  abnormality?
