--- a/src/javascript/templates/patient1/patient1View7-3.hbs
+++ b/src/javascript/templates/patient1/patient1View7-3.hbs
@@ -59,7 +59,7 @@
  Tissue is stained with two different-colored chemicals to help the pathologist determine whether or not the cells from the tissue sample are cancerous.
 
                             </p>
-                          <span class="left-arrow"><a class="top-fix" data-navigate="patient1view8">&#8594;</a></span>
+                          <span class="left-arrow"><a class="top-fix continue next" data-navigate="patient1view8">&#8594;</a></span>
 
                       </div>
                   </div>
@@ -72,7 +72,7 @@
 
                         </div>
                         <div class="col-md-4">
-                          <a data-navigate="patient1view8" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                          <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                         </div>
                       </div>
                   </div>
