--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -62,7 +62,7 @@
                 <blockquote>
                 Velma’s doctors have sent her biopsy tissue to be evaluated by the pathologist.
                 </blockquote>
-                <main id="content-main" class="row patient-1 svg-test">
+                <main id="content-main" class="row patient-1 ">
 
                 <h2>Conducting the biopsy:</h2>
                 <p>Normal cells are orderly and form regular breast duct structures. The cells are similar to one another and have smaller nuclei.  They stain purple with intervening pink stain.
