--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -10,7 +10,9 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
     <div class="col-md-5 no-pad">
+      <a class="" href="/patient1view1" data-navigate="patient1view1">
         <img class="patient1" src="images/patient3-final.jpg">
+      </a>
     </div>
     <div class="col-md-7 no-pad">
       <a class="no-link-color2" href="/patient1view1" data-navigate="patient1view1">
