--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -48,7 +48,10 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
   <div class="col-md-5 no-pad">
+    <a class="" href="/patient3view1" data-navigate="patient3view1">
+
     <img class="patient3" src="images/patient2-final.jpg">
+  </a>
   </div>
   <div class="col-md-7 no-pad">
     <a class="no-link-color2" href="/patient3view1" data-navigate="patient3view1">
