--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -51,7 +51,7 @@
     <div class="col-md-6 col-md-offset-1 top-quote">
       <blockquote>
     The <span class="pink-hl">Estrogen Receptor (ER) Test</span> determines if the cells from the breast tissue have protein receptors for estrogen.     </blockquote>
-    <main id="content-main" class="row patient-1">
+    <main id="content-main" class="row patient-1 svg-test">
 
       <h2>Conducting the ER test:</h2>
         <div class="svg-container">
@@ -77,7 +77,7 @@
 
                 </div>
                 <div class="col-md-4">
-                  <a data-navigate="patient1view18" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                  <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                 </div>
               </div>
           </div>
