--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -53,7 +53,7 @@
     <blockquote>
   Velma’s doctors have sent her tissue sample for HER2 FISH testing.
   </blockquote>
-  <main id="content-main" class="row patient-1">
+  <main id="content-main" class="row patient-1 svg-test">
 
     <h2>Conducting the HER2 FISH Test:</h2>
       <div class="svg-container">
@@ -79,7 +79,7 @@ The slide is heated at 82° C to denature the sample.
 
               </div>
               <div class="col-md-4">
-                <a data-navigate="patient1view23" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
               </div>
             </div>
         </div>
