--- a/src/javascript/templates/patient1/patient1View24.hbs
+++ b/src/javascript/templates/patient1/patient1View24.hbs
@@ -90,7 +90,7 @@
 
               </div>
               <div class="col-md-4">
-                <a data-navigate="patient1view25" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                <a class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
               </div>
             </div>
         </div>
