--- a/src/javascript/templates/patient1/patient1View25.hbs
+++ b/src/javascript/templates/patient1/patient1View25.hbs
@@ -75,7 +75,7 @@
 
                   </div>
                   <div class="col-md-4">
-                    <a data-navigate="startview2" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                    <a  class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                   </div>
                 </div>
             </div>
