--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -62,7 +62,7 @@
             <blockquote>
               Velma had a right breast biopsy. Let’s evaluate the tissue.
             </blockquote>
-              <main id="content-main" class="row patient-1 svg-test">
+              <main id="content-main" class="row patient-1">
 
                 <h2>Conducting the biopsy:</h2>
                 <p>Does this tissue sample indicate the presence of cancer?
