--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -28,7 +28,10 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
     <div class="col-md-5 no-pad">
+      <a class="" href="/patient2view1" data-navigate="patient2view1">
+
       <img class="patient2" src="images/patient1-final.jpg">
+    </a>
     </div>
     <div class="col-md-7 no-pad">
       <a class="no-link-color" href="/patient2view1" data-navigate="patient2view1">
