fixed sentence on view4

--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -37,13 +37,12 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Review Velma’s mammogram and click on the area that shows an abnormality.
+    Here is Velma's mammogram
     </blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
       <p>
-        Review Velma’s mammogram and click on an area that shows abnormalities. If necessary, click Previous to review the normal mammogram.
-
+        Review Velma’s mammogram and click on the area that shows an abnormality. If necessary, click Previous to review the normal mammogram.
       </p>
       <div class="svg-container">
         <div class="svg-text">Click the area that shows an abnormality.</div>
