fixed padding from 60px to 50px

--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -17,7 +17,9 @@
       <img class="lock" src="images/medical.png" alt="" />
         <div class="patient-title background-pink">
             <h4>patient no. 01</h4>
-            <h3>Velma Whatever</h3>
+            <h3>Velma Belt</h3>
+            <img class="arrow-start" src="images/velmarrow.png">
+
         </div>
         <div class="row patient-copy">
             <p>
@@ -38,6 +40,8 @@
         <div class="patient-title background-purple">
             <h4>patient no. 02</h4>
             <h3>Michele Johnson</h3>
+            <img class="arrow-start" src="images/michelearrow.png">
+
         </div>
         <div class="row patient-copy">
             <p>
@@ -58,6 +62,8 @@
   <div class="patient-title background-green">
     <h4>patient no. 03</h4>
     <h3>Brittany Featherston</h3>
+    <img class="arrow-start" src="images/brittanyarrow.png">
+
   </div>
     <div class="row patient-copy">
       <p>
