--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -19,6 +19,7 @@
         <div class="patient-title background-pink">
             <h4>patient no. 01</h4>
             <h3>Velma Belt</h3>
+            <img class="arrow-start" src="images/velmarrow.png">
         </div>
         <div class="row patient-copy">
             <p>
@@ -38,6 +39,7 @@
         <div class="patient-title background-purple">
             <h4>patient no. 02</h4>
             <h3>Michele Johnson</h3>
+            <img class="arrow-start" src="images/michelearrow.png">
         </div>
         <div class="row patient-copy">
             <p>
@@ -55,6 +57,8 @@
   <div class="patient-title background-green">
     <h4>patient no .03</h4>
     <h3>Brittany Featherston</h3>
+    <img class="arrow-start" src="images/brittanyarrow.png">
+
   </div>
     <div class="row patient-copy">
       <p>
