--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -68,7 +68,7 @@ path {
   padding: 0 1em;
 }
 #content-main {
-  padding: 60px;
+  padding: 50px;
 }
 main {
   background-color: white;
@@ -89,8 +89,11 @@ main {
   }
   figure {
     position:relative;
-    padding: 0 0em;
     margin:0!important;
+    img {
+      padding:0px 0em;
+
+    }
     figcaption {
       position: absolute;
       bottom: 0px;
@@ -1220,7 +1223,12 @@ iframe {
 .next-test:after {
   right: -34px!important;
 }
-
+.arrow-start {
+  position: absolute;
+top: 37px;
+height: 21px;
+right: 161px;
+}
 .overlay-pink {
   position: absolute;
   background-color: #DD307B;
