--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -17,7 +17,7 @@
     <div class="col-md-7 no-pad">
       <a class="no-link-color2" href="/patient1view1" data-navigate="patient1view1">
         <div class="patient-title background-pink">
-            <h4>patient no. 01</h4>
+            <h4>patient n<span style="text-transform:lowercase;">o</span>. 01</h4>
             <h3>Velma Belt</h3>
             <img class="arrow-start" src="images/velmarrow.png">
         </div>
@@ -37,7 +37,7 @@
     <div class="col-md-7 no-pad ">
       <img class="lock" src="images/locked.png" alt="" />
         <div class="patient-title background-purple">
-            <h4>patient no. 02</h4>
+            <h4>patient n<span style="text-transform:lowercase;">o</span>. 02</h4>
             <h3>Michele Johnson</h3>
             <img class="arrow-start" src="images/michelearrow.png">
         </div>
@@ -55,7 +55,7 @@
   <div class="col-md-7 no-pad ">
     <img class="lock" src="images/locked.png" alt="" />
   <div class="patient-title background-green">
-    <h4>patient no .03</h4>
+    <h4>patient n<span style="text-transform:lowercase;">o</span> .03</h4>
     <h3>Brittany Featherston</h3>
     <img class="arrow-start" src="images/brittanyarrow.png">
 
