--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -16,7 +16,7 @@
     <div class="col-md-7 no-pad ">
       <img class="lock" src="images/medical.png" alt="" />
         <div class="patient-title background-pink">
-            <h4>patient no. 01</h4>
+            <h4>patient n<span style="text-transform:lowercase;">o</span>. 01</h4>
             <h3>Velma Belt</h3>
             <img class="arrow-start" src="images/velmarrow.png">
 
@@ -38,7 +38,7 @@
     <div class="col-md-7 no-pad">
       <a class="no-link-color" href="/patient2view1" data-navigate="patient2view1">
         <div class="patient-title background-purple">
-            <h4>patient no. 02</h4>
+            <h4>patient n<span style="text-transform:lowercase;">o</span>. 02</h4>
             <h3>Michele Johnson</h3>
             <img class="arrow-start" src="images/michelearrow.png">
 
@@ -60,7 +60,7 @@
   <div class="col-md-7 no-pad locked">
     <img class="lock" src="images/locked.png" alt="" />
   <div class="patient-title background-green">
-    <h4>patient no. 03</h4>
+    <h4>patient n<span style="text-transform:lowercase;">o</span>. 03</h4>
     <h3>Brittany Featherston</h3>
     <img class="arrow-start" src="images/brittanyarrow.png">
 
