changed 'treament recommendations t ' to 'recommendations'

--- a/src/javascript/templates/patient1/patient1View16.hbs
+++ b/src/javascript/templates/patient1/patient1View16.hbs
@@ -42,7 +42,7 @@
                         </div>
                       <ul>
                         <li><span>No.04</span></li>
-                        <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li>Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                     </div>
                   </nav>
