--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -53,7 +53,7 @@
                         <li>
                             <span>No.04</span>
                         </li>
-                        <li>Treatment Recommendations</li>
+                        <li>Recommendations</li>
                         <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                     </ul>
                 </div>
