--- a/src/javascript/templates/patient1/patient1View11-typeform.hbs
+++ b/src/javascript/templates/patient1/patient1View11-typeform.hbs
@@ -40,7 +40,7 @@
                           </ul>
                           <ul>
                             <li><span>No.04</span></li>
-                            <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                            <li>Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                           </ul>
                         </div>
                       </nav>
