--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -50,7 +50,7 @@
                               <li>
                                   <span>No.04</span>
                               </li>
-                              <li>Treatment Recommendations</li>
+                              <li>Recommendations</li>
                               <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                           </ul>
                       </div>
