fixed copy for patient1view5

--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -53,7 +53,7 @@
       </div>
 
       <p>
-        Select the object that is closet to the size of the abnormality.
+      Which object is closest in size?
       </p>
 
 
