fixed other two start pages

--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -18,7 +18,7 @@
         <div class="patient-title background-pink">
             <h4>patient n<span style="text-transform:lowercase;">o</span>. 01</h4>
             <h3>Velma Belt</h3>
-            <img class="arrow-start" src="images/velmarrow.png">
+            <img class="arrow-start" src="images/arrow.png">
 
         </div>
         <div class="row patient-copy">
@@ -39,7 +39,7 @@
         <div class="patient-title background-purple">
             <h4>patient n<span style="text-transform:lowercase;">o</span>. 02</h4>
             <h3>Michele Johnson</h3>
-            <img class="arrow-start" src="images/michelearrow.png">
+            <img class="arrow-start" src="images/arrow.png">
 
         </div>
         <div class="row patient-copy">
@@ -62,7 +62,7 @@
   <div class="patient-title background-green">
     <h4>patient n<span style="text-transform:lowercase;">o</span>. 03</h4>
     <h3>Brittany Featherston</h3>
-    <img class="arrow-start" src="images/brittanyarrow.png">
+    <img class="arrow-start" src="images/arrow.png">
 
   </div>
     <div class="row patient-copy">
