--- a/src/javascript/templates/patient2/patient2view4.hbs
+++ b/src/javascript/templates/patient2/patient2view4.hbs
@@ -51,17 +51,17 @@ Click below to make your selection for next steps.
 </p>
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
-            
-              
-            
+
+
+
          </figure> -->
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
-               <div class="col-md-4">
+               <div class="col-md-6">
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -81,7 +81,7 @@ Click below to make your selection for next steps.
 
 
                </div>
-               <div class="col-md-4 line-across">
+               <div class="col-md-2 line-across">
 
                </div>
                <div class="col-md-4">
