--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -66,11 +66,11 @@ Student makes selection.  Feedback given.
          </figure> -->
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
-               <div class="col-md-4">
+               <div class="col-md-6">
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -90,7 +90,7 @@ Student makes selection.  Feedback given.
 
 
                </div>
-               <div class="col-md-4 line-across">
+               <div class="col-md-2 line-across">
 
                </div>
                <div class="col-md-4">
