--- a/src/javascript/templates/patient2/patient2view9.hbs
+++ b/src/javascript/templates/patient2/patient2view9.hbs
@@ -55,17 +55,17 @@ Do you have enough information to make a recommendation for treatment or do you 
 </p>
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
-            
-              
-            
+
+
+
          </figure> -->
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
-               <div class="col-md-4">
+               <div class="col-md-6">
 
 
                  <!-- Button trigger modal -->
-                 <a class="previous"><button class="select" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
+                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-target="#myModal" >Select Treatment</button></a>
 
 
 
@@ -85,7 +85,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 
 
                </div>
-               <div class="col-md-4 line-across">
+               <div class="col-md-2 line-across">
 
                </div>
                <div class="col-md-4">
