added arrow to previous button

--- a/src/javascript/templates/patient1/patient1View11.hbs
+++ b/src/javascript/templates/patient1/patient1View11.hbs
@@ -68,7 +68,7 @@ Surgery that conserves the breast is always the best approach unless there are f
                       <div class="row continue-container background-nav-blue">
                           <div class="col-md-12 no-pad text-center">
                             <div class="col-md-4">
-                              <a href="/patient1view10" data-navigate="patient1view10" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                              <a href="/patient1view10" data-navigate="patient1view10" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                             </div>
                             <div class="col-md-4 line-across">
 
