--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -75,7 +75,7 @@ A second antibody binds to the first and color develops where this antibody bind
         <div class="row continue-container background-nav-blue">
             <div class="col-md-12 no-pad text-center">
               <div class="col-md-4">
-                <a data-navigate="patient1view17" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                <a data-navigate="patient1view17" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
               </div>
               <div class="col-md-4 line-across">
 
