--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -58,7 +58,7 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a class="previous"><button class="muted" type="button" name="button">Previous</button></a>
+                 <a class="previous"><button class="muted" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
