--- a/src/javascript/templates/patient1/patient1View11-typeform.hbs
+++ b/src/javascript/templates/patient1/patient1View11-typeform.hbs
@@ -73,7 +73,7 @@
                         <div class="row continue-container background-nav-blue">
                             <div class="col-md-12 no-pad text-center">
                               <div class="col-md-4">
-                                <a class="previous" href="/patient1view10" data-navigate="patient1view10"><button class="" type="button" name="button">Previous</button></a>
+                                <a class="previous" href="/patient1view10" data-navigate="patient1view10"><button class="" type="button" name="button">&#8592; Previous</button></a>
                               </div>
                               <div class="col-md-4 col-md-offset-4">
 
