--- a/src/javascript/templates/patient1/patient1View13.hbs
+++ b/src/javascript/templates/patient1/patient1View13.hbs
@@ -89,7 +89,7 @@ Patient age: 44 years old</td></p>
                         <div class="row continue-container background-nav-blue">
                             <div class="col-md-12 no-pad text-center">
                               <div class="col-md-4">
-                                <a class="previous" href="/patient1view12" data-navigate="patient1view12"><button class="" type="button" name="button">Previous</button></a>
+                                <a class="previous" href="/patient1view12" data-navigate="patient1view12"><button class="" type="button" name="button">&#8592; Previous</button></a>
                               </div>
                               <div class="col-md-4 line-across">
 
