--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -73,7 +73,7 @@ The slide is heated at 82° C to denature the sample.
         <div class="row continue-container background-nav-blue">
             <div class="col-md-12 no-pad text-center">
               <div class="col-md-4">
-                <a data-navigate="patient1view21" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                <a data-navigate="patient1view21" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
               </div>
               <div class="col-md-4 line-across">
 
