--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -81,7 +81,7 @@ The sample is washed in a buffer agent.</p>
                 <div class="col-md-12 no-pad text-center">
                     <div class="col-md-4">
                         <a data-navigate="patient1view22" class="previous">
-                            <button class="" type="button" name="button">Previous</button>
+                            <button class="" type="button" name="button">&#8592; Previous</button>
                         </a>
                     </div>
                     <div class="col-md-4 line-across">
