--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -155,7 +155,7 @@
 <div class="row continue-container background-nav-blue">
     <div class="col-md-12 no-pad text-center">
       <div class="col-md-4">
-        <a class="previous" href="/patient1view4" data-navigate="patient1view4"><button class="" type="button" name="button">Previous</button></a>
+        <a class="previous" href="/patient1view4" data-navigate="patient1view4"><button class="" type="button" name="button">&#8592; Previous</button></a>
       </div>
       <div class="col-md-4 line-across"></div>
       <div class="col-md-4">
