--- a/src/javascript/templates/patient1/patient1View7.hbs
+++ b/src/javascript/templates/patient1/patient1View7.hbs
@@ -66,7 +66,7 @@ Tissue is fixed and placed into wax.
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                         <div class="col-md-4">
-                          <a data-navigate="patient1view6" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                          <a data-navigate="patient1view6" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                         </div>
                         <div class="col-md-4 line-across">
 
