--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -82,7 +82,7 @@ Cancerous cells have a disordered appearance with large, irregular, different sh
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                         <div class="col-md-4">
-                          <a data-navigate="patient1view7" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                          <a data-navigate="patient1view7" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                         </div>
                         <div class="col-md-4 line-across">
 
