--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -116,7 +116,7 @@ Velma’s breast tissue sample
                       <div class="col-md-12 no-pad text-center">
                           <div class="col-md-4">
                               <a data-navigate="patient1view8" class="previous">
-                                  <button class="" type="button" name="button">Previous</button>
+                                  <button class="" type="button" name="button">&#8592; Previous</button>
                               </a>
                           </div>
                           <div class="col-md-4 line-across">
