--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -68,7 +68,7 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view9" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient2view9" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
