--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -115,7 +115,7 @@ Michele has never had breast cancer before.</p>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view2" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient2view2" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
