--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -68,7 +68,7 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view5" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient2view5" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
