--- a/src/javascript/templates/patient3/patient3view1.hbs
+++ b/src/javascript/templates/patient3/patient3view1.hbs
@@ -59,7 +59,7 @@ In this segment of the Decoding Cancer Virtual Lab, you will evaluate Brittanyâ€
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a class="previous"><button class="muted" type="button" name="button">Previous</button></a>
+                 <a class="previous"><button class="muted" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
