--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -73,7 +73,7 @@ Brittany had a left breast biopsy. Let’s evaluate the tissue.
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient3view4" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view4" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
