--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -78,7 +78,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient3view7" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view7" class="previous"><button class="" type="button" name="button">&#8592; Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
