--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -3,7 +3,7 @@
     <div class="col-sm-3 no-pad">
       <div id="side-navs-1">
         <nav class="side-nav">
-          <img class="img-responsive" src="images/patient_headshot3_cropped.jpg" alt="" />
+          <img class="img-responsive patient1" src="images/patient_headshot3_cropped.jpg" alt="" />
           <ul class="complete-side">
             <li><span class="number-gray">No.01</span></li>
             <li class="pink-text">Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
