fixed checkmark on patient 1view9

--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -77,7 +77,7 @@ Velma’s breast tissue sample
                      <div class="row m-bottom">
 
 
-                     <div class="col-md-2 yes-no col-sm-offset-3">
+                     <div class="col-md-3 yes-no col-sm-offset-2-5">
                        <a  class="continue next"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
                        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
@@ -93,7 +93,7 @@ Velma’s breast tissue sample
                          </div>
                        </div>
                      </div>
-                     <div class="col-md-2  col-sm-offset-2 yes-no">
+                     <div class="col-md-3  col-sm-offset-1 yes-no">
                        <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
 
                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
