--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -102,7 +102,7 @@
                           <h2>Correct! The area you clicked on indicates abnormal breast tissue.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient2view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient2view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
 
                         </div>
                       </div>
