--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -5,8 +5,8 @@
       <nav class="side-nav background-green">
         <img class="patient3" src="images/patient2-final.jpg">
         <ul>
-          <li><span class="white">Patient No.02</span></li>
-          <li>Michele Johnson</li>
+          <li><span class="white">Patient No.03</span></li>
+          <li>Brittany Featherston</li>
         </ul>
         <div class="row next-steps p-2-steps">
         <ul class="background-green">
