fixed patient1 bubbles on side-nav

--- a/src/javascript/templates/patient1/patient1View10.hbs
+++ b/src/javascript/templates/patient1/patient1View10.hbs
@@ -18,7 +18,7 @@
                           <div class="row next-steps">
 
                               <div class="row breadcrumb biopsy">
-                                <ul>
+                                <ul class="ul-fix">
                                   <li class="first-step completed"><span class="dot completed"></span></li>
                                   <li class="second-step completed"><span class="dot completed"></span></li>
                                   <li class="third-step completed"><span class="dot completed"></span></li>
