--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -25,7 +25,7 @@
             <div class="row next-steps">
 
                 <div class="row breadcrumb steps-13">
-                  <ul>
+                  <ul class="ul-fix">
                     <li class="1st-step completed"><span class="dot completed"></li>
                     <li class="2nd-step completed"><span class="dot completed"></span></li>
                     <li class="3rd-step completed"><span class="dot completed"></span></li>
