--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -9,7 +9,7 @@
           <li>Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
         </ul>
         <div class="row breadcrumb">
-          <ul>
+        <ul class="ul-fix">
             <li class="first-step completed"><span class="dot completed"></span></li>
             <li class="second-step completed"><span class="dot completed"></span></li>
             <li class="third-step completed"><span class="dot completed"></span></li>
