--- a/src/javascript/templates/patient1/patient1View1.hbs
+++ b/src/javascript/templates/patient1/patient1View1.hbs
@@ -9,7 +9,7 @@
           <li>Mammograms</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
         </ul>
         <div class="row breadcrumb">
-          <ul>
+          <ul class="ul-fix">
             <li class="first-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
             <li class="second-step"><span class="dot"></span></li>
             <li class="third-step"><span class="dot"></span></li>
