--- a/src/javascript/templates/patient1/patient1View14.hbs
+++ b/src/javascript/templates/patient1/patient1View14.hbs
@@ -27,7 +27,7 @@
                   <div class="row next-steps">
 
                       <div class="row breadcrumb steps-13">
-                        <ul>
+                        <ul class="ul-fix">
                           <li class="1st-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
                           <li class="2nd-step "><span class="dot "></span></li>
                           <li class="3rd-step "><span class="dot "></span></li>
