--- a/src/javascript/templates/patient1/patient1View6.hbs
+++ b/src/javascript/templates/patient1/patient1View6.hbs
@@ -21,7 +21,7 @@
                     <div class="row next-steps">
 
                         <div class="row breadcrumb biopsy">
-                          <ul>
+                        <ul class="ul-fix">
                             <li class="first-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
                             <li class="second-step"><span class="dot"></span></li>
                             <li class="third-step"><span class="dot"></span></li>
