--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -20,7 +20,7 @@
                     <div class="row next-steps">
 
                         <div class="row breadcrumb biopsy">
-                          <ul>
+                          <ul class="ul-fix">
                             <li class="first-step completed">
                                 <span class="dot completed"></span>
                             </li>
