--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -744,7 +744,7 @@ top: -4px;
         }
         &:nth-child(4) {
           left: 246px;
-          top: 105px;
+          top: 77px;
           &:after {
             content: '';
             width: 70px;
@@ -762,7 +762,7 @@ top: -4px;
         }
         &:nth-child(5) {
           left: 148px;
-          top: 105px;
+          top: 77px;
           z-index: 999;
           &:after:not(.mammo) {
             content: '';
@@ -780,7 +780,7 @@ top: -4px;
           }
         }
         &:nth-child(6) {
-          top: 104px;
+          top: 77px;
           left: 44px;
           &:after {
             content: '';
@@ -798,7 +798,7 @@ top: -4px;
           }
         }
         &:nth-child(7) {
-          top: 182px;
+          top: 155px;
           left: 44px;
           &:after {
             content: '';
@@ -821,7 +821,7 @@ top: -4px;
           }
         }
         &:nth-child(8) {
-          top: 182px;
+          top: 155px;
           left: 148px;
           &:after {
             content: '';
@@ -844,7 +844,7 @@ top: -4px;
           }
         }
         &:nth-child(9) {
-          top: 182px;
+          top: 155px;
           left: 247px;
           &:after {
             content: '';
@@ -867,7 +867,7 @@ top: -4px;
           }
         }
         &:nth-child(10) {
-          top: 261px;
+          top: 234px;
           left: 247px;
           &:after {
             content: '';
@@ -890,7 +890,7 @@ top: -4px;
           }
         }
         &:nth-child(11) {
-          top: 261px;
+          top: 234px;
           left: 147px;
           &:after {
             content: '';
@@ -913,7 +913,7 @@ top: -4px;
           }
         }
         &:nth-child(12) {
-          top: 261px;
+          top: 234px;
           left: 45px;
           &:after {
             content: '';
@@ -1309,4 +1309,10 @@ font-size: 42px;
 line-height: 48px;
 margin:0;
 text-transform:none;
+}
+.ul-fix {
+  transform: scale(0.8);
+    position: relative;
+    left: -23px;
+    top: 38px;
 }
