--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -93,7 +93,7 @@ Velma’s breast tissue sample
                          </div>
                        </div>
                      </div>
-                     <div class="col-md-3  col-sm-offset-1 yes-no">
+                     <div style="margin-left: 25px;" class="col-md-3 yes-no">
                        <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
 
                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
