fixed continue buttons on intro pages

--- a/src/javascript/templates/screen2IntroView.hbs
+++ b/src/javascript/templates/screen2IntroView.hbs
@@ -9,7 +9,7 @@ Precision medicine is changing the face of cancer treatment.
    <figure class="margin-bottom-equal">
      <img class="one-hun" src="images/slide3.png" alt="" />
 
-        
+
 
    </figure>
 
@@ -18,6 +18,6 @@ Precision medicine is changing the face of cancer treatment.
 </p>
     <div class="row continue-container">
         <div class="col-md-12 no-pad text-center">
-          <a data-navigate="startview" class="continue background-nav-blue"><button type="button" class="line-before" name="button">Continue</button></a>
+          <a data-navigate="startview" class="continue background-nav-blue intro-fix"><button type="button" class="line-before" name="button">Continue</button></a>
         </div>
     </div>
