fixed full length label on interactives

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -264,7 +264,8 @@ font-size: 15px;
   position: absolute;
   color: white;
   padding: 1.4em;
-  width: 50%;
+  width: 100%;
+top: 13px;
   margin: .3em;
   line-height: 34px;
   z-index: 999;
@@ -288,7 +289,8 @@ font-size: 15px;
   position: absolute;
   color: white;
   padding: 2em;
-  width: 50%;
+  width: 100%;
+top: 13px;
   margin: .3em;
   line-height: 34px;
       z-index: 999;
